--- a/model/Sentiment_Analysis_Amazon.ipynb
+++ b/model/Sentiment_Analysis_Amazon.ipynb
@@ -2,8 +2,189 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "399b0918-2f02-45bc-af2f-273de98a34ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ec41f0e9-6ad4-4f60-a854-ecb3377e7b83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv(\"amazon_reviews.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0ec51cef-f491-4cdf-943a-ea3f304748e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>reviewerName</th>\n",
+       "      <th>helpful</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>unixReviewTime</th>\n",
+       "      <th>reviewTime</th>\n",
+       "      <th>day_diff</th>\n",
+       "      <th>helpful_yes</th>\n",
+       "      <th>total_vote</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A3SBTW3WS4IQSN</td>\n",
+       "      <td>B007WTAJTO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>No issues.</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Four Stars</td>\n",
+       "      <td>1406073600</td>\n",
+       "      <td>2014-07-23</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A18K1ODH1I2MVB</td>\n",
+       "      <td>B007WTAJTO</td>\n",
+       "      <td>0mie</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Purchased this for my device, it worked as adv...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>MOAR SPACE!!!</td>\n",
+       "      <td>1382659200</td>\n",
+       "      <td>2013-10-25</td>\n",
+       "      <td>409</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2FII3I2MBMUIA</td>\n",
+       "      <td>B007WTAJTO</td>\n",
+       "      <td>1K3</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>it works as expected. I should have sprung for...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>nothing to really say....</td>\n",
+       "      <td>1356220800</td>\n",
+       "      <td>2012-12-23</td>\n",
+       "      <td>715</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A3H99DFEG68SR</td>\n",
+       "      <td>B007WTAJTO</td>\n",
+       "      <td>1m2</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>This think has worked out great.Had a diff. br...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Great buy at this price!!!  *** UPDATE</td>\n",
+       "      <td>1384992000</td>\n",
+       "      <td>2013-11-21</td>\n",
+       "      <td>382</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A375ZM4U047O79</td>\n",
+       "      <td>B007WTAJTO</td>\n",
+       "      <td>2&amp;amp;1/2Men</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Bought it with Retail Packaging, arrived legit...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>best deal around</td>\n",
+       "      <td>1373673600</td>\n",
+       "      <td>2013-07-13</td>\n",
+       "      <td>513</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       reviewerID        asin  reviewerName helpful  \\\n",
+       "0  A3SBTW3WS4IQSN  B007WTAJTO           NaN  [0, 0]   \n",
+       "1  A18K1ODH1I2MVB  B007WTAJTO          0mie  [0, 0]   \n",
+       "2  A2FII3I2MBMUIA  B007WTAJTO           1K3  [0, 0]   \n",
+       "3   A3H99DFEG68SR  B007WTAJTO           1m2  [0, 0]   \n",
+       "4  A375ZM4U047O79  B007WTAJTO  2&amp;1/2Men  [0, 0]   \n",
+       "\n",
+       "                                          reviewText  overall  \\\n",
+       "0                                         No issues.      4.0   \n",
+       "1  Purchased this for my device, it worked as adv...      5.0   \n",
+       "2  it works as expected. I should have sprung for...      4.0   \n",
+       "3  This think has worked out great.Had a diff. br...      5.0   \n",
+       "4  Bought it with Retail Packaging, arrived legit...      5.0   \n",
+       "\n",
+       "                                  summary  unixReviewTime  reviewTime  \\\n",
+       "0                              Four Stars      1406073600  2014-07-23   \n",
+       "1                           MOAR SPACE!!!      1382659200  2013-10-25   \n",
+       "2               nothing to really say....      1356220800  2012-12-23   \n",
+       "3  Great buy at this price!!!  *** UPDATE      1384992000  2013-11-21   \n",
+       "4                        best deal around      1373673600  2013-07-13   \n",
+       "\n",
+       "   day_diff  helpful_yes  total_vote  \n",
+       "0       138            0           0  \n",
+       "1       409            0           0  \n",
+       "2       715            0           0  \n",
+       "3       382            0           0  \n",
+       "4       513            0           0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7009e197-82c8-460e-a313-2574b145b7f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +192,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
